[gd_scene load_steps=4 format=3 uid="uid://dm3yrefqykipw"]

[ext_resource type="Script" uid="uid://c7fsjpjdkxygx" path="res://scripts/hud.gd" id="1_ahhtf"]

[sub_resource type="LabelSettings" id="LabelSettings_toqtt"]
font_size = 50
font_color = Color(0.192157, 0.215686, 0.788235, 1)
outline_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_ahhtf"]
font_size = 96
font_color = Color(1, 0.0313726, 1, 1)
outline_size = 20

[node name="HUD" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_ahhtf")

[node name="PlayerScoreLabel" type="Label" parent="."]
offset_left = 60.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 89.0
text = "0"
label_settings = SubResource("LabelSettings_toqtt")
horizontal_alignment = 1

[node name="AIScoreLabel" type="Label" parent="."]
offset_left = 1052.0
offset_top = 20.0
offset_right = 1092.0
offset_bottom = 89.0
text = "0"
label_settings = SubResource("LabelSettings_toqtt")
horizontal_alignment = 1

[node name="GameOver" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -66.0
offset_right = 235.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
text = "YOU WON"
label_settings = SubResource("LabelSettings_ahhtf")

[node name="Button" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = 16.0
offset_right = 75.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 0
text = "RESTART"

[connection signal="pressed" from="GameOver/Button" to="." method="_on_button_pressed"]
